<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ffffff"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="808dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <TextView

            android:id="@+id/user1"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="138dp"
            android:text="@string/userid"
            android:textColor="#000"
            android:textSize="20dp"
            tools:ignore="RtlCompat,SpUsage" />

        <EditText
            android:id="@+id/userid"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/user1"
            android:layout_toRightOf="@id/user1"

            android:hint="Enter your email"
            tools:ignore="Autofill,HardcodedText,RtlHardcoded,TextFields" />

        <TextView


            android:id="@+id/pass1"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="200dp"
            android:text="@string/password_text"
            android:textColor="#000000"
            android:textSize="20dp"
            tools:ignore="RtlHardcoded,SpUsage" />


        <Button
            android:id="@+id/log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"

            android:layout_marginTop="250dp"
            android:layout_marginEnd="157dp"
            android:layout_marginRight="157dp"
            android:text="@string/LOGIN"
            android:textColor="#D6075B"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/resetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="116dp"
            android:layout_marginLeft="116dp"
            android:layout_marginTop="330dp"
            android:text="@string/Forgot_pass"
            android:textSize="15dp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="390dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_regi"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/toRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/REGISTER"
                android:textFontWeight="900"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,SpUsage" />
        </LinearLayout>


        <EditText
            android:id="@+id/userpass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/pass1"
            android:layout_toRightOf="@id/user1"
            android:ems="10"
            android:hint="Enter Your Password"
            android:inputType="textPassword"
            tools:ignore="Autofill,RtlHardcoded,TextFields,UnknownId" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>